# MAGLab_Events_Bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: report_maglab_open_status_on_discord_events.py  scrape_synoptic_view_and_crop_scale_for_discord_events.py  sync_multiple_google_calendars_to_discord_events.py
